# SocketDemoSbarrettCC

./: .gitignore  .gitmodules  AUTHORS  Assignment2README.txt  Assignment3README.txt  CMakeLists.txt  HOW_TO_USE.txt  INSTRUCTIONS.txt  README.md  README.txt  RunClient.bat  RunServer.bat  SocketDemo.sln  TO-DO.txt  TO-DOs.txt  UpgradeLog.htm
.github/workflows/: msbuild.yml
Assignment2/: Assignment2.sln
Assignment2/Assignment2/: Assignment2.vcxproj  Assignment2.vcxproj.filters  Color.h  Crosshair.cpp  Crosshair.h  Globals.h  LTexture.cpp  LTexture.h  NetworkManager.h  Player.cpp  Player.h  Source.cpp  Texture.cpp  Vec2D.h
BaseGameInc/: UnitManager.h
BaseGameSrc/: Game.cpp  Unit.cpp  main.cpp
DeanLib/: DeanLib.sln  DeanLib.vcxproj  Vector2D.cpp
DeanLib/include/: DeanLibDefines.h  DeanLibUtilities.h  MultiDimensionalArray.h  TimedCallback.h  Timer.h  Trackable.h
DeanLib/lib/: DeanLibDebug.idb  DeanLibDebug.lib  DeanLibDebug.lib.r446  DeanLibDebug.lib.r554
Game/: .sln  DeleteUnitsEvent.cpp  DeleteUnitsEvent.h  EscEvent.cpp  EscEvent.h  Game.cpp  Game.h  GameEvent.cpp  GameEvent.h  GameEventSystem.cpp  GameEventSystem.h  GameListener.cpp  GameListener.h  InputTranslator.cpp  InputTranslator.h  PauseEvent.cpp  PauseEvent.h  PlaceUnitEvent.cpp  PlaceUnitEvent.h  SwitchAnimEvent.cpp  SwitchAnimEvent.h  WASDEvent.cpp  WASDEvent.h  assignment2.vcxproj  main.cpp
Game/DeanLib/: DeanLib.vcxproj  DeanMath.cpp  MemoryPool.cpp  MemoryTracker.cpp  Timer.cpp
Game/Debug/: assignment2.exe.recipe  assignment2.vcxproj.FileListAbsolute.txt  vc142.idb
Game/GraphicsLib/: Animation.cpp  Animation.h  Event.cpp  Event.h  EventListener.h  EventSystem.cpp  EventSystem.h  Game.h  GraphicsBuffer.cpp  GraphicsBuffer.h  GraphicsBufferManager.cpp  GraphicsBufferManager.h  GraphicsLib.vcxproj  GraphicsSystem.cpp  GraphicsSystem.h  InputSystem.cpp  InputSystem.h  KeyEvent.cpp  KeyEvent.h  MouseEvent.cpp  MouseEvent.h  MouseMoveEvent.cpp  MouseMoveEvent.h  Sprite.cpp  Sprite.h  System.cpp  System.h  Unit.cpp  Unit.h  UnitManager.cpp  UnitManager.h
GameFiles/: Coin.cpp  Coin.h  GameObject.cpp  GameObject.h  JoinerInput.cpp  JoinerInput.h  Key.cpp  Key.h  Lock.cpp  Lock.h  NetworkManager.cpp  NetworkManager.h  PlayerMarcher.cpp  PlayerMarcher.h  WorldState.cpp  WorldState.cpp.orig  WorldState.h
GraphicsLib/: Animation.cpp  Animation.h  Color.h  Event.h  EventListener.h  EventSystem.h  Font.cpp  Font.h  GraphicsBuffer.h  GraphicsBufferManager.cpp  GraphicsBufferManager.h  GraphicsLib.vcxproj  GraphicsSystem.h  InputSystem.cpp  InputSystem.h  Sprite.h  System.h
RedEngine/: CMakeLists.txt  RedEngine.vcxproj
RedEngine/Header Files/: Animation.h  AnimationData.h  AnimationManager.h  Camera2D.h  Color.h  Event.h  EventListener.h  EventSystem.h  GraphicsBuffer.h  GraphicsBufferManager.h  GraphicsSystem.h  InputSystem.h  KeyboardEvent.h  LibraryIncludes.h  MouseEvent.h  Sprite.h
RedEngine/Source Files/: Animation.cpp  AnimationData.cpp  AnimationManager.cpp  Camera2D.cpp  Color.cpp  Event.cpp  EventListener.cpp  EventSystem.cpp  GraphicsBuffer.cpp  GraphicsBufferManager.cpp  GraphicsSystem.cpp  InputSystem.cpp  KeyboardEvent.cpp  MouseEvent.cpp  Sprite.cpp
RedEnginePhysics/: PhysicsData2D.cpp  PhysicsData2D.h  lllCMakeLists.txt
RedLib/: CMakeLists.txt
RedLib/Header Files/: MemoryTracker.h  Timer.h  Trackable.h  Vector2D.h  WinTimer.h
RedLib/Source Files/: MemoryTracker.cpp  Timer.cpp  Trackable.cpp  Vector2D.cpp  WinTimer.cpp
RedNet/: CMakeLists.txt
RedNet/Header Files/: TCPNetworkManager.h
RedNet/Source Files/: TCPNetworkManager.cpp
RoboCat/: Animation.h  Ball.cpp  Ball.h  Chapter3.vcxproj  Color.cpp  Color.h  Event.cpp  Event.h  EventListener.h  EventSystem.cpp  EventSystem.h  Font.h  Game.cpp  Game.h  GameEvent.cpp  GameEvent.h  GameObject.cpp  GameObject.h  GraphicsBuffer.cpp  GraphicsBuffer.h  GraphicsBufferManager.h  GraphicsLib.cpp  GraphicsLib.h  GraphicsLibrary.cpp  GraphicsSystem.cpp  GraphicsSystem.h  InputSystem.cpp  InputSystem.h  InputTranslator.cpp  InputTranslator.h  LagSimulator.cpp  LagSimulator.h  MyTData.cpp  MyTData.h  Network.cpp  NetworkManager.cpp  NetworkManager.h  Networker.cpp  Newtorker.h  Paddle.cpp  (+19 more)
RoboCat/Debug/: SocketDemo.exe.recipe  SocketDemo.ilk
RoboCat/Inc/: AckRange.h  Bullet.h  ByteSwap.h  CircleClass.h  Color.h  Colour.h  Crosshair.h  DeliveryNotificationManager.h  Effect.h  Event.h  EventListener.h  EventSystem.h  Game.h  GameController.h  GameData.h  GameObject.h  GameObjects.h  Globals.h  GraphicsBuffer.h  GraphicsBufferManager.h  GraphicsLibrary.h  GraphicsSystems.h  InFlightPacket.h  InputSystem.h  MemoryBitStream.h  Network.h  NetworkManager.h  Networker.h  OutputWindow.h  Packet.h  Player.h  PlayerController.h  PlayerUser.h  RainParticle.h  RectangleObject.h  RoboCatPCH.h  RoboCatShared.h  RoboCatShared.h.orig  RoboCatShared_REMOTE_1046.h.bak  RoboMath.h  (+15 more)
RoboCat/Src/: AckRange.cpp  Bullet.cpp  ChatUser.cpp  ChatUser.h  Colour.cpp  Crosshair.cpp  (+42 more)
SampleGame/: CMakeLists.txt  CMakeSettings.json  SampleGame.vcxproj
SampleGame/Header Files/: Game.h  GameListener.h  Player.h  PlayerMoveEvent.h  Unit.h  UnitManager.h
SampleGame/Source Files/: Game.cpp  GameListener.cpp  Player.cpp  PlayerMoveEvent.cpp  Unit.cpp  UnitManager.cpp  main.cpp
allegro_wrapper_functions-main/: Colour.cpp  GraphicsLibrary.cpp  GraphicsLibrary.h  InputSystem.cpp  InputSystem.h  LICENSE  README.md
(+296 files in other folders)
